modile design added

--- a/EduProject/index.html
+++ b/EduProject/index.html
@@ -1,15 +1,50 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>ASP.NET Development</title>
-    <link rel="stylesheet" href="hattrick.css"/>
+    <link rel="stylesheet" href="hattrick.css" />
 </head>
+
 <body>
+    <header>
+        <a href="#default" class="logo">Valera</a>
+        <div class="header-right">
+            <a href="#home" class="active">Top News</a>
+            <a href="#">Recent</a>
+            <a href="#">About</a>
+        </div>
+    </header>
     <div class="box">
-        <div class="Column1">Valera Chadovich</div>
-        <div class="Column2">Sample</div>
-        <div class="Column3">lolololololol</div>
+        <div class="Column1">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elementum elit nisi, at porta odio ornare a. Etiam massa elit,
+            egestas ut luctus in, pretium ut nisi. Cras tempor pulvinar tortor, vel imperdiet eros gravida eu. Donec at lorem
+            at augue tincidunt consequat. Proin placerat, odio a ultricies accumsan, ligula nulla laoreet turpis, vel tempor
+            ex metus in mi. Nunc pulvinar velit at suscipit tincidunt. Vestibulum ligula eros, tempus eget maximus eu, pulvinar
+            a diam. Nullam maximus turpis et diam luctus, venenatis fermentum ex mattis. Nullam condimentum accumsan odio.
+            Quisque a fermentum lacus, non viverra arcu. Fusce ullamcorper eros non orci imperdiet elementum sed sit amet
+            nisl. Vestibulum mattis orci eget erat porta feugiat.
+        </div>
+        <div class="Column2">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elementum elit nisi, at porta odio ornare a. Etiam massa elit,
+            egestas ut luctus in, pretium ut nisi. Cras tempor pulvinar tortor, vel imperdiet eros gravida eu. Donec at lorem
+            at augue tincidunt consequat. Proin placerat, odio a ultricies accumsan, ligula nulla laoreet turpis, vel tempor
+            ex metus in mi. Nunc pulvinar velit at suscipit tincidunt. Vestibulum ligula eros, tempus eget maximus eu, pulvinar
+            a diam. Nullam maximus turpis et diam luctus, venenatis fermentum ex mattis. Nullam condimentum accumsan odio.
+            Quisque a fermentum lacus, non viverra arcu. Fusce ullamcorper eros non orci imperdiet elementum sed sit amet
+            nisl. Vestibulum mattis orci eget erat porta feugiat.
+        </div>
+        <div class="Column3">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elementum elit nisi, at porta odio ornare a. Etiam massa elit,
+            egestas ut luctus in, pretium ut nisi. Cras tempor pulvinar tortor, vel imperdiet eros gravida eu. Donec at lorem
+            at augue tincidunt consequat. Proin placerat, odio a ultricies accumsan, ligula nulla laoreet turpis, vel tempor
+            ex metus in mi. Nunc pulvinar velit at suscipit tincidunt. Vestibulum ligula eros, tempus eget maximus eu, pulvinar
+            a diam. Nullam maximus turpis et diam luctus, venenatis fermentum ex mattis. Nullam condimentum accumsan odio.
+            Quisque a fermentum lacus, non viverra arcu. Fusce ullamcorper eros non orci imperdiet elementum sed sit amet
+            nisl. Vestibulum mattis orci eget erat porta feugiat.
+        </div>
     </div>
 </body>
+
 </html>
